Better caching and parallel download/build process